fixed extra padding for ul

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -302,8 +302,8 @@ top: 13px;
 }
 .specs {
   list-style:none;
-  margin-bottom: 35px;
-      margin-left: 4em;
+  margin-left: 0em;
+  padding-left: 0;
   li {
     font-size: 15px;
   }
